Telas de pedido e listagem

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -49,6 +49,11 @@
                 <li class="nav-item" *ngIf="isDocumentation()">
                     <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
                 </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/signin']" target="_blank" class="nav-link">
+                        <i class="nc-icon nc-circle-10"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
