--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -3,13 +3,18 @@
        <div class="content-center">
           <div class="motto text-center">
              <h1>Entregamos em todo o Brasil</h1>
-             <h3><i class="nc-icon nc-minimal-down"></i> Veja os nossos trabalhos! <i class="nc-icon nc-minimal-down"></i></h3>
-          </div>
+             <br />
+             <button class="btn btn-outline-neutral btn-round m-2"
+            (click)="scrollToElement(trabalhos)"><i class="nc-icon nc-minimal-down"></i> Veja os nossos produtos! <i class="nc-icon nc-minimal-down"></i></button> 
+            <br /> 
+            <button class="btn btn-outline-neutral btn-round m-2"
+            (click)="scrollToElement(encomenda)">Ou tem um projeto seu para imprimir?</button>          
+            </div>
        </div>
     </div>
     <div class="wrapper">
 
-      <div class="section section-gray">
+      <div #trabalhos class="section section-gray">
          <div class="container">
            <div class="row">
              <div class="col-md-3">
@@ -140,7 +145,7 @@
        </div>
       </div>
    </div>
-       <div id="bottom" class="section">
+       <div #encomenda class="section">
          <div class="container">
              <div class="row">
                  <div class="col-md-8 mr-auto ml-auto">
