--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -25,9 +25,40 @@
                             </div><button
                                 class="btn btn-danger btn-block btn-round">Login</button>
                         </form>
-                        <div class="forgot"><a href="#"
-                                class="btn btn-link btn-danger">Esqueceu a senha?</a></div>
-                    </div>
+                                <ng-template #content let-modal>
+                                    <div class="modal-header">
+                                      <h4 class="modal-title" id="modal-basic-title">Recuperar senha de acesso</h4>
+                                      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                                        <span aria-hidden="true">&times;</span>
+                                      </button>
+                                    </div>
+                                    <div class="modal-body">
+                                      <form>
+                                        <div class="form-group">
+                                          <label for="dateOfBirth">Informe o seu Email</label>
+                                          <div class="input-group">
+                                            <div class="input-group"
+                                ng-reflect-ng-class="[object Object]">
+                                <div class="input-group-prepend"><span
+                                        class="input-group-text"><i
+                                            class="nc-icon nc-email-85"></i></span></div><input
+                                    type="text" placeholder="Email" class="form-control">
+                            </div>
+                                            
+                                          </div>
+                                        </div>
+                                      </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-default" (click)="modal.close('Save click')">Enviar</button>
+                                    </div>
+                                  </ng-template>
+                                  
+                                  <div class="forgot"><a class="btn btn-link btn-danger" (click)="open(content)">Esqueceu a senha?</a></div>
+                                  <hr>
+                                                          
+                        <a [routerLink]="['/signup']"
+                        class="text-muted text-center">Cadastrar novo usuário</a>
                 </div>
             </div>
             <div class="footer register-footer text-center">
