--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="navbar-translate">
             <a class="navbar-brand" [routerLink]="['/']">&lt;BeMaker&gt;</a>
-            <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
+            <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse"
+                data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -11,25 +13,29 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Nos siga no Twitter" data-placement="bottom" href="https://twitter.com" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Nos siga no Twitter" data-placement="bottom"
+                        href="https://twitter.com" target="_blank">
                         <i class="fa fa-twitter"></i>
                         <p class="d-lg-none">Twitter</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Curta a gente no Facebook" data-placement="bottom" href="https://www.facebook.com" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Curta a gente no Facebook" data-placement="bottom"
+                        href="https://www.facebook.com" target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Nos siga no Instagram" data-placement="bottom" href="https://www.instagram.com" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Nos siga no Instagram" data-placement="bottom"
+                        href="https://www.instagram.com/bemaker_3d/" target="_blank">
                         <i class="fa fa-instagram"></i>
                         <p class="d-lg-none">Instagram</p>
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Entre em contato" data-placement="bottom" href="https://linkwhatsapp" target="_blank">
+                    <a class="nav-link" rel="tooltip" title="Entre em contato" data-placement="bottom"
+                        href="https://linkwhatsapp" target="_blank">
                         <i class="fa fa-whatsapp"></i>
                         <p class="d-lg-none">Whatsapp</p>
                     </a>
@@ -37,22 +43,39 @@
                 <li class="nav-item" *ngIf="!isDocumentation()">
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a [routerLink]="['/trabalhos']" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Encomendas</a>
+                    <a [routerLink]="['/encomendar']" class="nav-link"><i
+                            class="nc-icon nc-book-bookmark"></i> Encomendas</a>
                 </li>
                 <li class="nav-item" *ngIf="isHome()">
-                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
+                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local"
+                        target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
                 </li>
                 <li class="nav-item" *ngIf="!isHome()">
-                    <a [routerLink]="['/trabalhos']" *ngIf="!isDocumentation()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Produtos</a>
+                    <a [routerLink]="['/trabalhos']" *ngIf="!isDocumentation()" class="nav-link"><i
+                            class="nc-icon nc-layout-11"></i>Produtos</a>
                     <a [routerLink]="['/trabalhos']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a>
                 </li>
                 <li class="nav-item" *ngIf="isDocumentation()">
-                    <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
+                    <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local"
+                        target="_blank" class="nav-link">Have an issue</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/signin']" target="_blank" class="nav-link">
+                    <a [routerLink]="['/signin']" class="nav-link">
                         <i class="nc-icon nc-circle-10"></i>
                     </a>
+                </li>
+                <li class="nav-item ">
+                    <div ngbDropdown class="dropdown" placement="bottom-left">
+                    <a class="nav-link" id="dropdownBasic3" ngbDropdownToggle>
+                        <i class="nc-icon nc-settings-gear-65" aria-hidden="true"></i></a>
+                        <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="dropdown-danger dropdown-menu-right">
+                            <a [routerLink]="['/encomendas']" class="dropdown-item">Listagem de Encomendas</a>
+                            <div class="dropdown-divider"></div>
+                            <a [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
+                            <div class="dropdown-divider"></div>
+                            <a [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
