--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -120,6 +120,9 @@
                      </div>
                   </div>
                   <div class="form-group mt-3">
+                     <button class="btn btn-default btn-round">Adicionar modelo 3d</button>
+                  </div>
+                  <div class="form-group mt-3">
                      <h6>Descrição</h6><textarea
                         placeholder="Adicione uma descrição para o produto" rows="13" maxlength="150"
                         class="form-control textarea-limited"></textarea>
