--- a/src/app/pages/page404/page404.component.html
+++ b/src/app/pages/page404/page404.component.html
@@ -7,7 +7,7 @@
     <p><strong>Esta página não está disponível.</strong></p>
 
     <p>
-    O link em que você clicou pode não estar funcionando, ou a página pode ter sido removida. Voltar para o Instagram.
+    O link em que você clicou pode não estar funcionando, ou a página pode ter sido removida.
     </p>
     
     <a [routerLink]="['/']" >Voltar à página principal</a>
