--- a/src/app/pages/updateProduct/updateProduct.component.html
+++ b/src/app/pages/updateProduct/updateProduct.component.html
@@ -120,6 +120,10 @@
                      </div>
                   </div>
                   <div class="form-group mt-3">
+                     <button class="btn btn-default btn-round">Adicionar modelo 3d</button>
+                     <button class="btn btn-default btn-round">Baixar modelo 3d</button>
+                  </div>
+                  <div class="form-group mt-3">
                      <h6>Descrição</h6><textarea
                         placeholder="Adicione uma descrição para o produto" rows="13" maxlength="150"
                         class="form-control textarea-limited">Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</textarea>
