--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -73,6 +73,8 @@
                             <div class="dropdown-divider"></div>
                             <a [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
                             <div class="dropdown-divider"></div>
+                            <a [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
+                            <div class="dropdown-divider"></div>
                             <a [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
                         </div>
                     </div>
