--- a/src/app/pages/ordersList/ordersList.component.html
+++ b/src/app/pages/ordersList/ordersList.component.html
@@ -38,6 +38,7 @@
                                         <th>Encomenda</th>
                                         <th>Cliente</th>
                                         <th>Cliente Email</th>
+                                        <th>Whatsapp</th>
                                         <th>Produto</th>
                                         <th>Status</th>
                                         <!---->
@@ -53,6 +54,9 @@
                                         </td>
                                         <td>
                                             thurinasadan123@yahoo.com
+                                        </td>
+                                        <td>
+                                            (55) 991234567
                                         </td>
                                         <td>
                                             Baby Grooth
@@ -72,6 +76,9 @@
                                             thurinasadan123@yahoo.com
                                         </td>
                                         <td>
+                                            (55) 991234567
+                                        </td>
+                                        <td>
                                             Baby Grooth
                                         </td>
                                         <td>
@@ -87,6 +94,9 @@
                                         </td>
                                         <td>
                                             thurinasadan123@yahoo.com
+                                        </td>
+                                        <td>
+                                            (55) 991234567
                                         </td>
                                         <td>
                                             Baby Grooth
@@ -106,6 +116,9 @@
                                             thurinasadan123@yahoo.com
                                         </td>
                                         <td>
+                                            (55) 991234567
+                                        </td>
+                                        <td>
                                             Baby Grooth
                                         </td>
                                         <td>
@@ -123,6 +136,9 @@
                                             thurinasadan123@yahoo.com
                                         </td>
                                         <td>
+                                            (55) 991234567
+                                        </td>
+                                        <td>
                                             Baby Grooth
                                         </td>
                                         <td>
@@ -138,6 +154,9 @@
                                         </td>
                                         <td>
                                             thurinasadan123@yahoo.com
+                                        </td>
+                                        <td>
+                                            (55) 991234567
                                         </td>
                                         <td>
                                             Baby Grooth
