--- a/src/app/pages/productDetail/productDetail.component.html
+++ b/src/app/pages/productDetail/productDetail.component.html
@@ -33,18 +33,22 @@
            <p>Já pensou em um Baby Groot todo charmoso e fofinho em sua casa. Encomende logo o seu.</p>
            <span class="label label-default shipping mt-3 mb-3">Entrega em todo o Brasil</span>
            <div class="row">
-             <div class="col-md-6 col-sm-6">
+             <div class="col-md-4 col-sm-6">
                <div class="form-group">
                 <h6>Nome</h6>
                 <input type="text" class="form-control border-input" placeholder="Seu Nome">
               </div>
              </div>
-             <div class="col-md-6 col-sm-6">
+             <div class="col-md-4 col-sm-6">
               <div class="form-group">
                 <h6>E-mail</h6>
                 <input type="text" class="form-control border-input" placeholder="Seu email de contato">
               </div>
              </div>
+             <div class="col-md-4">
+              <h6>Whatsapp</h6>
+                <input type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
+          </div>
              <div class="col-md-6 col-sm-6">
               <div class="form-group">
                 <h6>Calcular frete</h6>
