--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -86,6 +86,15 @@
                                 <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <label>Whatsapp</label>
+                            <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
+                            </div>
+                        </div>
                     
                     
                     <div class="col-md-8">
