--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -145,33 +145,33 @@
        </div>
       </div>
    </div>
-       <div #encomenda class="section">
-         <div class="container">
-             <div class="row">
-                 <div class="col-md-8 mr-auto ml-auto">
-                     <h2 class="text-center">Tem um projeto para imprimir?</h2>
-                     <h3 class="text-center">Faça um orçamento</h3>
-                     <form class="contact-form">
-                         <div class="row">
-                             <div class="col-md-6">
-                                 <label>Nome</label>
-                                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                                     <div class="input-group-prepend">
-                                       <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
-                                     </div>
-                                     <input type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" >
-                                 </div>
-                             </div>
-                             <div class="col-md-6">
-                                 <label>Email</label>
-                                 <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                     <div class="input-group-prepend">
-                                       <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                     </div>
-                                     <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
-                                 </div>
-                             </div>
-                             <div class="col-md-6">
+   <div #encomenda class="section landing-section">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-8 mr-auto ml-auto">
+                  <h2 class="text-center">Tem um projeto para imprimir?</h2>
+                  <h3 class="text-center">Faça um orçamento</h3>
+                  <form class="contact-form">
+                      <div class="row">
+                          <div class="col-md-6">
+                              <label>Nome</label>
+                              <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
+                                  </div>
+                                  <input type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" >
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <label>Email</label>
+                              <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
+                                  </div>
+                                  <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
+                              </div>
+                          </div>
+                          <div class="col-md-6">
                               <label>Whatsapp</label>
                               <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
                                   <div class="input-group-prepend">
@@ -180,27 +180,39 @@
                                   <input type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
                               </div>
                           </div>
-                         
-                         <div class="col-md-8">
-                             <label>Tem imagens ou um modelo 3D?</label>
-                             <div>
-                                 <button class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
-                             </div>
-                         </div>
-                     </div>
-                     <br>
-                         <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
-                         <textarea class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
-                         <div class="row">
-                             <div class="col-md-4 mr-auto ml-auto">
-                                 <button class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
-                             </div>
-                         </div>
-                     </form>
-                 </div>
-             </div>
-         </div>
-     </div>
+                      
+                      
+                      <div class="col-md-8">
+                          <label>Tem imagens ou um modelo 3D?</label>
+                          <div>
+                              <input style="display: none;" (change)="uploadImage($event)" type="file" multiple
+                                      class="form-control-file" #onUpload>
+                              <button (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
+                          </div>
+                          <div  class="mt-3 col-md-12 row">
+                              <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
+                                  <div class="info">
+                                      <i class="icon nc-icon nc-app"></i> 
+                                  </div>
+                                      <p>{{ file.fileName }}</p>
+                                      <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <br>
+                      <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
+                      <textarea class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
+                      <div class="row">
+                          <div class="col-md-4 mr-auto ml-auto">
+                              <button class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
 
 
       
