--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -66,33 +66,36 @@
             <div class="col-md-8 mr-auto ml-auto">
                 <h2 class="text-center">Tem um projeto para imprimir?</h2>
                 <h3 class="text-center">Faça um orçamento</h3>
-                <form class="contact-form">
+                <form class="contact-form" [formGroup]="orderForm" (ngSubmit)="createOrder()">
                     <div class="row">
                         <div class="col-md-6">
                             <label>Nome</label>
+                            <span *ngIf="(orderForm.controls['name'].invalid && (orderForm.controls['name'].dirty || orderForm.controls['name'].touched)) && orderForm.controls['name'].errors.required" class="text-danger"> é obrigatório.</span>
                             <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" >
+                                <input name="name" formControlName="name" type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" required="required">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <label>Email</label>
+                                <span *ngIf="(orderForm.controls['email'].invalid && (orderForm.controls['email'].dirty || orderForm.controls['email'].touched)) && orderForm.controls['email'].errors.required" class="text-danger"> é obrigatório.</span>
                             <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
+                                <input name="email" formControlName="email" type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
                             </div>
                         </div>
                         <div class="col-md-6">
                             <label>Whatsapp</label>
+                            <span *ngIf="(orderForm.controls['clientPhone'].invalid && (orderForm.controls['clientPhone'].dirty || orderForm.controls['clientPhone'].touched)) && orderForm.controls['clientPhone'].errors.required" class="text-danger"> é obrigatório.</span>
                             <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
                                 <div class="input-group-prepend">
                                   <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
+                                <input name="clientPhone" formControlName="clientPhone" type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
                             </div>
                         </div>
                     
@@ -100,9 +103,9 @@
                     <div class="col-md-8">
                         <label>Tem imagens ou um modelo 3D?</label>
                         <div>
-                            <input style="display: none;" (change)="uploadImage($event)" type="file" multiple
+                            <input style="display: none;" (change)="uploadFile($event)" type="file" multiple
                                     class="form-control-file" #onUpload>
-                            <button (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
+                            <button type="button" (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
                         </div>
                         <div  class="mt-3 col-md-12 row">
                             <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
@@ -113,14 +116,23 @@
                                     <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
                             </div>
                         </div>
+                        <div  class="mt-3 col-md-12 row">
+                            <div *ngFor="let image of imagesToUpload; ; let i=index" class="m-2 mr-4">
+                                <div class="info">
+                                    <i class="icon nc-icon nc-image"></i> 
+                                </div>
+                                    <p>{{ image.fileName }}</p>
+                                    <a (click)="removeImage(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br>
                     <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
-                    <textarea class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
+                    <textarea name="notes" formControlName="notes" class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
                     <div class="row">
                         <div class="col-md-4 mr-auto ml-auto">
-                            <button class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
+                            <button [disabled]="disabledSubmitButton" type="submit" class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
                         </div>
                     </div>
                 </form>
