Auth guard e interceptor

--- a/src/app/pages/usersList/usersList.component.html
+++ b/src/app/pages/usersList/usersList.component.html
@@ -21,6 +21,7 @@
                                     <tr>
                                         <th>Nome</th>
                                         <th>Editar Permissões</th>
+                                        <th>Salvar Permissões</th>
                                         <th>Ações</th>
                                         <!---->
                                     </tr>
@@ -89,6 +90,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
                                         </td>
                                         <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
@@ -160,6 +164,9 @@
                                             </div>
                                         </td>
                                         <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
+                                        </td>
+                                        <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
                                         </td>
                                         <!---->
@@ -227,6 +234,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
                                         </td>
                                         <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
@@ -298,6 +308,9 @@
                                             </div>
                                         </td>
                                         <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
+                                        </td>
+                                        <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
                                         </td>
                                         <!---->
@@ -367,6 +380,9 @@
                                             </div>
                                         </td>
                                         <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
+                                        </td>
+                                        <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
                                         </td>
                                         <!---->
@@ -434,6 +450,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-link btn-default btn-sm td-excluir">Salvar Permissões</a>
                                         </td>
                                         <td>
                                             <a class="btn btn-link btn-danger btn-sm td-excluir">Excluir</a>
