--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,29 +1,35 @@
 <div class="wrapper">
     <div class="page-header" style="background-image: url('./assets/img/signup.jpg');">
         <div class="filter"></div>
-        <div class="container">
+        <div *ngIf="loading==true" id="loading-wrapper">
+          <div id="loading-text">Carregando</div>
+          <div id="loading-content"></div>
+        </div>
+        <div *ngIf="loading==false" class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                     <div class="card card-register">
                         <h3 class="title">Login de Funcionários</h3>
                         <form novalidate=""
-                            class="register-form ng-untouched ng-pristine ng-valid"><label
-                            >Email</label>
+                            class="register-form ng-untouched ng-pristine ng-valid" [formGroup]="loginForm" (ngSubmit)="login()">
+                            <label>Email</label>
+                            <span *ngIf="(loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)) && loginForm.controls['email'].errors.required" class="text-danger"> é obrigatório.</span>
                             <div class="input-group form-group-no-border"
                                 ng-reflect-ng-class="[object Object]">
                                 <div class="input-group-prepend"><span
                                         class="input-group-text"><i
-                                            class="nc-icon nc-email-85"></i></span></div><input
-                                    type="text" placeholder="Email" class="form-control">
+                                            class="nc-icon nc-email-85"></i></span></div>
+                                            <input name="email" formControlName="email" type="text" placeholder="Email" class="form-control">
                             </div><label>Senha</label>
+                            <span *ngIf="(loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)) && loginForm.controls['password'].errors.required" class="text-danger"> é obrigatório.</span>
                             <div class="input-group form-group-no-border"
                                 ng-reflect-ng-class="[object Object]">
                                 <div class="input-group-prepend"><span
                                         class="input-group-text"><i
                                             class="nc-icon nc-key-25"></i></span></div><input
-                                    type="text" placeholder="Senha" class="form-control">
+                                    type="password" placeholder="Senha" name="password" formControlName="password" class="form-control">
                             </div><button
-                                class="btn btn-danger btn-block btn-round">Login</button>
+                                class="btn btn-danger btn-block btn-round" type="submit">Login</button>
                         </form>
                                 <ng-template #content let-modal>
                                     <div class="modal-header">
