--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -52,25 +52,30 @@
                     <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local"
                         target="_blank" class="nav-link">Have an issue</a>
                 </li>
-                <li class="nav-item">
-                    <a [routerLink]="['/signin']" class="nav-link">
-                        <i class="nc-icon nc-circle-10"></i>
-                    </a>
-                </li>
-                <li class="nav-item ">
+                
+                <li *ngIf="user.get('token') && user.get('name') && user.get('permissions')" class="nav-item ">
                     <div ngbDropdown class="dropdown" placement="bottom-left">
-                    <a class="nav-link" id="dropdownBasic3" ngbDropdownToggle>
-                        <i class="nc-icon nc-settings-gear-65" aria-hidden="true"></i></a>
+
+                        <a style="cursor: pointer;" class="nav-link" id="dropdownBasic3" ngbDropdownToggle><i class="nc-icon nc-settings-gear-65" aria-hidden="true"></i> {{ user.get("name") }}</a>
+                        
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="dropdown-danger dropdown-menu-right">
                             <a [routerLink]="['/encomendas']" class="dropdown-item">Listagem de Encomendas</a>
                             <div class="dropdown-divider"></div>
-                            <a [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
+                            <a *nfIf="user.get('permissions').split(',').includes('update:user')" [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
                             <div class="dropdown-divider"></div>
-                            <a [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
+                            <a *nfIf="user.get('permissions').split(',').includes('create:product')" [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
                             <div class="dropdown-divider"></div>
-                            <a [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
+                            <a *nfIf="user.get('permissions').split(',').includes('create:user')" [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
                         </div>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a *ngIf="user.get('token') == null" [routerLink]="['/signin']" class="nav-link" placement="right" ngbTooltip="Login">
+                        <i class="nc-icon nc-circle-10"></i>
+                    </a>
+                    <a *ngIf="user.get('token') && user.get('name') && user.get('permissions')"  (click)="logout()" class="nav-link">
+                        <i placement="top" ngbTooltip="Desconectar" class="nc-icon nc-user-run" style="cursor: pointer;"></i>
+                    </a>
                 </li>
             </ul>
         </div>
