--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -61,11 +61,11 @@
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic3" class="dropdown-danger dropdown-menu-right">
                             <a [routerLink]="['/encomendas']" class="dropdown-item">Listagem de Encomendas</a>
                             <div class="dropdown-divider"></div>
-                            <a *nfIf="user.get('permissions').split(',').includes('update:user')" [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
+                            <a *ngIf="user.get('permissions').split(',').includes('update:user')" [routerLink]="['/funcionarios']" class="dropdown-item">Listagem de Usuários</a>
                             <div class="dropdown-divider"></div>
-                            <a *nfIf="user.get('permissions').split(',').includes('create:product')" [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
+                            <a *ngIf="user.get('permissions').split(',').includes('create:product')" [routerLink]="['/criar-trabalho']" class="dropdown-item">Criar Produto</a>
                             <div class="dropdown-divider"></div>
-                            <a *nfIf="user.get('permissions').split(',').includes('create:user')" [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
+                            <a *ngIf="user.get('permissions').split(',').includes('create:user')" [routerLink]="['/signup']" class="dropdown-item">Cadastrar novo Usuário</a>
                         </div>
                     </div>
                 </li>
@@ -73,7 +73,7 @@
                     <a *ngIf="user.get('token') == null" [routerLink]="['/signin']" class="nav-link" placement="right" ngbTooltip="Login">
                         <i class="nc-icon nc-circle-10"></i>
                     </a>
-                    <a *ngIf="user.get('token') && user.get('name') && user.get('permissions')"  (click)="logout()" class="nav-link">
+                    <a *ngIf="user.get('token') && user.get('name') && user.get('permissions')"  (click)="logout()" class="nav-link" [routerLink]="['/']">
                         <i placement="top" ngbTooltip="Desconectar" class="nc-icon nc-user-run" style="cursor: pointer;"></i>
                     </a>
                 </li>
